--- a/_posts/2018-07-12-mock数据平台.md
+++ b/_posts/2018-07-12-mock数据平台.md
@@ -22,15 +22,15 @@ keywords: mock，node， js
 
 1. 添加一个仓库，根据开发者或者项目
 
-![image]({{site.baseurl}}/assets/img/newStore.jpg)
+![image](/assets/img/newStore.jpg)
 
 2. 新增接口
 
-![image]({{site.baseurl}}/assets/img/add.jpg)
+![image](/assets/img/add.jpg)
 
 3. 接口名称或者数据需要修改的时候直接修改保存，支持api中的关键字过滤接口，多个关键字空格分割
 
-![image]({{site.baseurl}}/assets/img/edit.jpg)
+![image](/assets/img/edit.jpg)
 ####  使用：
 
 1. 直接在代码中全路径调用
@@ -43,7 +43,7 @@ keywords: mock，node， js
 
 2. 通过配置webpack proxyTable，用相对路径调用
 
-![image]({{site.baseurl}}/assets/img/use.jpg)
+![image](/assets/img/use.jpg)
 
 ```
  this.post('/api/test').then(json=>{
